@@ -1,3 +1,9 @@
+Fri May  2 19:46:30 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/Network_Adapters_Test.cpp:
+          Change order of deletion to avoid a clean up problem for
+          some build configurations.
+
 Fri May  2 14:28:06 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ace/config-macosx-leopard.h:
